# VideoNative

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildozer.spec  libvideo.c  main.kv  main.py  pyproject.toml
.github/workflows/: buildozer_action.yml
android/: Makefile  libvideo.c
examples/kivy/: buildozer.spec  main.kv  main.py
linux/: Makefile  libvideo.c
src/: media_decoder.cpp
windows/: Makefile  libvideo.c
